added new files
added time countdown to the website, midterm,final

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
 	<link rel="stylesheet" type="text/css" href="css/nivo-theme.css"/>	
 
+    <link href="styleCountdown.css" rel="stylesheet" type="text/css" /> <!--countdown-->
 
 
 </head>
@@ -48,6 +49,16 @@
 
     <div id="container">
 
+  <div id="del-countdown">
+      <h1>Mid-Terms</h1>
+      <div id="clock"></div>
+      <div id="units">
+        <span>Days</span>
+        <span>Hours</span>
+        <span>Minutes</span>
+        <span>Seconds</span>
+      </div>
+    </div>
 
 
     <!-- HEADER -->
@@ -417,6 +428,8 @@
 
 	</script>
 
+
+<script src="countdown.js"></script> <!--countdown javascript-->
 	
 
 </body>
