--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="container">
 
   <div id="del-countdown">
-      <h1>Mid-Terms</h1>
+      <h1><b>Mid-Terms</b></h1>
       <div id="clock"></div>
       <div id="units">
         <span>Days</span>
