--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="container">
 
-    <div class="back" style="background-color: red;">    
+    <div class="back" style="background-color: #B0C4DE;">    
     <div class="clock" style="margin:1em"></div>
     <div class="message"></div>
     </div>
