--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div id="container">
 
     <div class="back" style="background-color: #B0C4DE;">    
-    <div class="clock" style="margin:1em"></div>
+    <div class="clock" style="margin:0"></div>
     <div class="message"></div>
     </div>
 
