units are changed

--- a/index.html
+++ b/index.html
@@ -50,8 +50,17 @@
 
     <div id="container">
 
-    <div class="back" style="background-color: #B0C4DE;">    
-    <div class="clock" style="margin:0"></div>
+    <div class="back" style="background-color: #4682B4;">    
+    <div class="clock" style="margin:0;"></div>
+    <div class="units">
+        <ul>
+            <li>days</li>
+            <li >hours</li>
+            <li>minutes</li>
+            <li>seconds</li>
+
+        </ul>
+    </div>
     <div class="message"></div>
     </div>
 
