--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
     <div id="container">
 
-    <div class="back">
+    <!--<div class="back">
     <h1>Time till Mid-Terms</h1>
     <div class="clock" style="margin:0 0 0 53%; "></div>
     
@@ -64,7 +64,7 @@
         </ul>
     </div>
     <div class="message"></div>
-    </div>
+    </div>-->
 
     <!-- HEADER -->
 
