--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </form>
     </div> -->
     
-    <div class="probootstrap-page-wrapper">
+   <!-- <div class="probootstrap-page-wrapper">-->
       <!-- Fixed navbar -->
       
      <!-- <div class="probootstrap-header-top">
