--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                       <div class="owl-carousel" id="owl1">
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
+                            <figure class="probootstrap-media"><img src="images/vision.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
                             <div class="probootstrap-text">
                               <h3>Our Vision</h3>
                               <p>&#9679;  to develop research projects that will receive international recognition
@@ -360,7 +360,7 @@
                         <!-- END item -->
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
+                            <figure class="probootstrap-media"><img src="images/mission.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
                             <div class="probootstrap-text">
                               <h3>Our Mission</h3>
                               <p>&#9679; to provide our students with the necessary computer engineering background that will enable them in
@@ -374,7 +374,7 @@
                         <!-- END item -->
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
+                            <figure class="probootstrap-media"><img src="images/goals.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
                             <div class="probootstrap-text">
                               <h3>Our Goals</h3>
                               <p>&#9679; to educate our students with state-of-the-art computer engineering knowledge that emphasizes both
