--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
           <div class="row">
             <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
               <h2>Great Quotes</h2>
-              <p class="lead">Sed a repudiandae impedit voluptate nam Deleniti dignissimos perspiciatis nostrum porro nesciunt</p>
+              <p class="lead">Inspiring quotes</p>
             </div>
           </div>
           <!-- END row -->
@@ -652,7 +652,7 @@
                     <figure>
                       <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
                     </figure>
-                    <blockquote class="quote">&ldquo;Design must be functional and functionality must be translated into visual aesthetics, without any reliance on gimmicks that have to be explained.&rdquo; <cite class="author"> &mdash; <span>Mike Fisher</span></cite></blockquote>
+                    <blockquote class="quote">&ldquo;Success is a lousy teacher. It seduces smart people into thinking they can't lose.&rdquo; <cite class="author"> &mdash; <span>Bill Gates</span></cite></blockquote>
                   </div>
 
                 </div>
