--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                     <figure>
                       <img src="img/person_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
                     </figure>
-                    <blockquote class="quote">&ldquo;I think design would be better if designers were much more skeptical about its applications. If you believe in the potency of your craft, where you choose to dole it out is not something to take lightly.&rdquo; <cite class="author">&mdash; <span>Brandon White</span></cite></blockquote>
+                    <blockquote class="quote">&ldquo;Give everyone the power to share anything with anyone&rdquo; <cite class="author">&mdash; <span>Mark Zuckerberg</span></cite></blockquote>
                   </div>
                 </div>
                 
