--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                         <!-- END item -->
                         <div class="item">
                           <a href="#" class="probootstrap-featured-news-box">
-                            <figure class="probootstrap-media"><img src="img/img_sm_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
+                            <figure class="probootstrap-media"><img src="images/merits.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive"></figure>
                             <div class="probootstrap-text">
                               <h3>Our Merits and Principles</h3>
                               <p>&#9679; excellence in teaching and research<br>&#9679; loyalty to ethical issues<br>&#9679; professional and dedicated working habits<br>&#9679; alert to technological changes</p>
