quote images added

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="img/person_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="images/billGates.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
                     </figure>
                     <blockquote class="quote">&ldquo;Success is a lousy teacher. It seduces smart people into thinking they can't lose.&rdquo; <cite class="author"> &mdash; <span>Bill Gates</span></cite></blockquote>
                   </div>
@@ -659,7 +659,7 @@
                 <div class="item">
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="img/person_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="images/steveJobs.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
                     </figure>
                     <blockquote class="quote">&ldquo;Quality is more important than quantity. One home run is much better than two doubles.&rdquo; <cite class="author"> &mdash;<span>Steve Jobs</span></cite></blockquote>
                   </div>
