--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>--> 
-      <nav class="navbar navbar-default probootstrap-navbar" style="background-color: #DCDCDC;">
+      <nav class="navbar navbar-default probootstrap-navbar" style="background-color: transparent;">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
@@ -176,6 +176,7 @@
 
       <section class="flexslider">
         <ul class="slides">
+          
           <li style="background-image: url(images/slider/slide3.jpg)" class="overlay">
             <div class="container">
               <div class="row">
