--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
       </div>--> 
-      <nav class="navbar navbar-default probootstrap-navbar" style="background-color: transparent;">
+      <nav class="navbar navbar-default probootstrap-navbar">
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
