heading chaged to bold

--- a/index.html
+++ b/index.html
@@ -784,7 +784,7 @@
 
     <script type="text/javascript">
         var typed = new Typed(".type", {
-          strings: ["<span style='color:#9eaac7'>System.</span><span style='color:violet'>out</span><span style='color:#9eaac7'>.println</span><span style='color:#9eaac7'>(</span><span style='color:#698857'><b>&#34; WELCOME TO COMPUTER SCIENCE DEPARTMENT &#34;</b></span><span style='color:#9eaac7'>)</span><span style='color:#ce7827'>;</span>"],
+          strings: ["<span style='color:#9eaac7'><b>System.</b></span><span style='color:violet'><b>out</b></span><span style='color:#9eaac7'><b>.println</b></span><span style='color:#9eaac7'><b>(</b></span><span style='color:#698857'><b>&#34; WELCOME TO COMPUTER SCIENCE DEPARTMENT &#34;</b></span><span style='color:#9eaac7'><b>)</b></span><span style='color:#ce7827'><b>;</b></span>"],
           typeSpeed : 20,
           
           
