--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
                     <h1 class="probootstrap-heading probootstrap-animate"></h1>
-                    <h2 class="type"></h2>
+                    <h2 class="type" style="margin-top: 5%;"></h2>
                   </div>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
                     <h1 class="probootstrap-heading probootstrap-animate" class="header">What is Computer Science?</h1>
-                    <p style="color: #fff">Computers and the Internet are having a great impact on human life and on society.  Our lives, starting in
+                    <p class="paragraph">Computers and the Internet are having a great impact on human life and on society.  Our lives, starting in
 
             the second half of the twentieth century, have become computerized "at the speed of light."  We now live in
 
@@ -204,7 +204,7 @@
 
             Department offers a unique opportunity for bright young minds to excel themselves in the areas of computer
 
-            science, computer software, and computer hardware.</p><p><a href="#" class="btn btn-primary">Learn More</a></p>
+            science, computer software, and computer hardware.</p><p><a href="#" class="btn btn-primary" style="margin-top: 5%;">Learn More</a></p>
                   </div>
                 </div>
               </div>
