--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             </div>
           </li>
           
-          <li style="background-image: url(images/slider/slide1.jpg)" class="overlay">
+          <li style="background-image: url(images/comp.jpg)" class="overlay">
             <div class="container">
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
