--- a/events.html
+++ b/events.html
@@ -194,10 +194,10 @@
                   <h3>INVITATION TO CAREER DAY</h3>
                   <p>Student Council of IAAU is organizing Career Day on 21st of April 2016. Representatives of leading companies will answer whole day and you will have the chance to talk directly to them.</p>
                   <p>
-                    <span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
+                    <!--<span class="probootstrap-date"><i class="icon-calendar"></i>July 9, 2017</span>
                     <span class="probootstrap-location"><i class="icon-location2"></i>White Palace, Brooklyn, NYC</span>
+                    -->
                   </p>
-                  <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
                 <div class="probootstrap-image probootstrap-animate" >
                   <video class="probootstrap-video" controls autoplay muted>
