--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                   <li><a href="course-single.html">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
                   <li><a href="gallery.html">Alumni</a></li>
-                  <li><a href="gallery.html">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
@@ -99,7 +99,7 @@
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Bachelor Program</a>
                 <ul class="dropdown-menu">
-                  <li><a href="about.html">Courses</a></li>
+                  <li><a href="courses.html">Courses</a></li>
                   <li><a href="courses.html">Research</a></li>
                   <li><a href="course-single.html">Degree Guide</a></li>
                   <li><a href="gallery.html">Recent Diplomas</a></li>
@@ -144,7 +144,7 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Calendar</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Academic Calendar</a></li>
-                  <li><a href="courses.html">SChedule of Lectures</a></li>
+                  <li><a href="courses.html">Schedule of Lectures</a></li>
                   <li><a href="course-single.html">Midterms Schedule</a></li>
                   <li><a href="gallery.html">Finals Schedule</a></li>
                   <li><a href="gallery.html">Labs Schedule</a></li>
@@ -157,7 +157,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Policy & Regulations</a></li>
                   <li><a href="courses.html">Software</a></li>
-                  <li><a href="course-single.html">Contacts</a></li>
+                  <li><a href="contact.html">Contacts</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
