--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
-                  <li><a href="events.html">News</a></li>
+                  <li><a href="news.html">News</a></li>
                   <li><a href="courses.html">Developments</a></li>
                   <li><a href="course-single.html">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
