changed teachers images
changed teachers images

--- a/teachers.html
+++ b/teachers.html
@@ -178,10 +178,10 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="images/faculty/a.bondarev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/b.shambetova.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Aleksei Bondarev</h3>
+                  <h3>Burul Shambetova</h3>
                   <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
@@ -195,10 +195,10 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/person_7.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="images/faculty/a.bondarev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Dilshad Anarbaev</h3>
+                  <h3>Aleksei Bondarev</h3>
                   <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
@@ -215,10 +215,10 @@
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="images/faculty/u.sadybakasov.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                  <img src="img/person_5.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Burul Shambetova</h3>
+                  <h3>Dilshad Anarbaev</h3>
                   <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
