--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/styles-merged.css"> <!--code for Navbar-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
-    <link rel="stylesheet" type="text/css" href="styleTyped.css">
+    <link rel="stylesheet" type="text/css" href="css/styleTyped.css">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -77,7 +77,7 @@
                 <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
-                  <li><a href="news.html">News</a></li>
+                  <li><a href="News/new.html">News</a></li>
                   <li><a href="courses.html">Developments</a></li>
                   <li><a href="course-single.html">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
@@ -781,7 +781,7 @@
     <script src="js/scripts.min.js"></script>
     <script src="js/main.min.js"></script>
     <script src="js/custom.js"></script>
-    <script type="text/javascript" src="typed.js"></script>
+    <script type="text/javascript" src="js/typed.js"></script>
 
     <script type="text/javascript">
         var typed = new Typed(".type", {
