--- a/teachers.html
+++ b/teachers.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/faculty.html">
 
     <!--[if lt IE 9]>
       <script src="js/vendor/html5shiv.min.js"></script>
@@ -163,8 +164,8 @@
                   <img src="images/faculty/n.shaidullaev.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Nurlan Shaidullaev</h3>
-                  <p>Head Of CS Department</p>
+                  <h3>Nurlan Shaidullaev <a href="n.shaidullaev.html"></h3>
+                  <p>Head Of CS Department  </p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
