error page opened

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="News/new.html">News</a></li>
                   <li><a href="courses.html">Developments</a></li>
-                  <li><a href="course-single.html">Exchange Programs</a></li>
+                  <li><a href="http://ic.iaau.edu.kg/">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
                   <li><a href="gallery.html">Alumni</a></li>
                   <li><a href="contact.html">Contact Us</a></li>
