--- a/news.html
+++ b/news.html
@@ -79,7 +79,7 @@
                   <li><a href="course-single.html">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
                   <li><a href="gallery.html">Alumni</a></li>
-                  <li><a href="gallery.html">Contact Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
@@ -96,7 +96,7 @@
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Bachelor Program</a>
                 <ul class="dropdown-menu">
-                  <li><a href="about.html">Courses</a></li>
+                  <li><a href="courses.html">Courses</a></li>
                   <li><a href="courses.html">Research</a></li>
                   <li><a href="course-single.html">Degree Guide</a></li>
                   <li><a href="gallery.html">Recent Diplomas</a></li>
@@ -154,7 +154,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Policy & Regulations</a></li>
                   <li><a href="courses.html">Software</a></li>
-                  <li><a href="course-single.html">Contacts</a></li>
+                  <li><a href="contact.html">Contacts</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
