--- a/news.html
+++ b/news.html
@@ -141,14 +141,14 @@
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Calendar</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Academic Calendar</a></li>
-                  <li><a href="courses.html">SChedule of Lectures</a></li>
+                  <li><a href="courses.html">Schedule of Lectures</a></li>
                   <li><a href="course-single.html">Midterms Schedule</a></li>
                   <li><a href="gallery.html">Finals Schedule</a></li>
                   <li><a href="gallery.html">Labs Schedule</a></li>
                   
                </ul>
               </li>
-            <li><a href="events.html">Faculty</a></li>
+            <li><a href="teachers.html">Faculty</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
                 <ul class="dropdown-menu">
@@ -333,9 +333,9 @@
               <div class="probootstrap-footer-widget">
                 <h3>Contact Info</h3>
                 <ul class="probootstrap-contact-info">
-                  <li><i class="icon-location2"></i> <span>198 West 21th Street, Suite 721 New York NY 10016</span></li>
-                  <li><i class="icon-mail"></i><span>info@domain.com</span></li>
-                  <li><i class="icon-phone2"></i><span>+123 456 7890</span></li>
+                  <li><i class="icon-location2"></i> <span>Ankara Street 1/8</span></li>
+                  <li><i class="icon-mail"></i><span>info@iaau.edu.kg</span></li>
+                  <li><i class="icon-phone2"></i><span>+996 (312) 63-14-25</span></li>
                 </ul>
               </div>
             </div>
@@ -349,7 +349,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 text-left">
-                <p>&copy; 2017 <a href="https://probootstrap.com/">ProBootstrap:Enlight</a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
+                <p>&copy; 2018 <a href="https://probootstrap.com/">International Ala-Too University</a></p>
               </div>
               <div class="col-md-4 probootstrap-back-to-top">
                 <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
