--- a/contact.html
+++ b/contact.html
@@ -129,7 +129,7 @@
         </div>
       </nav>
       
-      <section class="probootstrap-section probootstrap-section-colored">
+      <section class="probootstrap-section probootstrap-section-colored" style="background-image: url(images/block-b.jpg);">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
