--- a/news.html
+++ b/news.html
@@ -148,7 +148,7 @@
                   
                </ul>
               </li>
-            <li><a href="events.html">Faculty</a></li>
+            <li><a href="teachers.html">Faculty</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
                 <ul class="dropdown-menu">
