--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="index.html">Home</a></li>
+              <li class="active"><a href="index.html" style="color: #49d192">Home</a></li>
                 <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Department</a>
                 <ul class="dropdown-menu">
                   <li><a href="News/new.html">News</a></li>
                   <li><a href="error.html">Developments</a></li>
@@ -93,11 +93,11 @@
                       <li><a href="#">Second Level Menu</a></li>
                     </ul>
                   </li>-->
-                  <li><a href="news.html">Info</a></li>
+                  <li><a href="info.html">Info</a></li>
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Bachelor Program</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Bachelor Program</a>
                 <ul class="dropdown-menu">
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="courses.html">Research</a></li>
@@ -120,7 +120,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Master Degree</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Master Degree</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Overview</a></li>
                   <li><a href="courses.html">Program</a></li>
@@ -141,7 +141,7 @@
               </li>
                  
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Calendar</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Calendar</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Academic Calendar</a></li>
                   <li><a href="courses.html">Schedule of Lectures</a></li>
@@ -151,9 +151,9 @@
                   
                </ul>
               </li>
-            <li><a href="teachers.html">Faculty</a></li>
+            <li><a href="teachers.html" style="color: #49d192">Faculty</a></li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Labs</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Policy & Regulations</a></li>
                   <li><a href="courses.html">Software</a></li>
@@ -205,7 +205,7 @@
 
             Department offers a unique opportunity for bright young minds to excel themselves in the areas of computer
 
-            science, computer software, and computer hardware.</p><p><a href="#" class="btn btn-primary" style="margin-top: 5%;">Learn More</a></p>
+            science, computer software, and computer hardware.</p><p><a href="info.html" class="btn btn-primary" style="margin-top: 5%;">Learn More</a></p>
                   </div>
                 </div>
               </div>
@@ -655,7 +655,7 @@
 
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="images/billGates.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="images/billGates.jpg" alt="Bill Gates">
                     </figure>
                     <blockquote class="quote">&ldquo;Success is a lousy teacher. It seduces smart people into thinking they can't lose.&rdquo; <cite class="author"> &mdash; <span>Bill Gates</span></cite></blockquote>
                   </div>
@@ -664,7 +664,7 @@
                 <div class="item">
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="images/steveJobs.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="images/steveJobs.jpg" alt="Steve Jobs">
                     </figure>
                     <blockquote class="quote">&ldquo;Quality is more important than quantity. One home run is much better than two doubles.&rdquo; <cite class="author"> &mdash;<span>Steve Jobs</span></cite></blockquote>
                   </div>
@@ -672,7 +672,7 @@
                 <div class="item">
                   <div class="probootstrap-testimony-wrap text-center">
                     <figure>
-                      <img src="img/person_3.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                      <img src="images/zuckerberg.jpg" alt="Mark Zuckerberg">
                     </figure>
                     <blockquote class="quote">&ldquo;Give everyone the power to share anything with anyone&rdquo; <cite class="author">&mdash; <span>Mark Zuckerberg</span></cite></blockquote>
                   </div>
