--- a/news.html
+++ b/news.html
@@ -56,7 +56,7 @@
           </div>
         </div>
       </div>--> 
-      <nav class="navbar navbar-default probootstrap-navbar">
+      <nav class="navbar navbar-default probootstrap-navbar" background-color:  #F5F5DC;>
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
