--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  <body style="background:url(images/pattern2.jpg) repeat fixed;">
 
    <!--<div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross">asdasdasd</i></a>
