--- a/courses.html
+++ b/courses.html
@@ -329,7 +329,7 @@
                 </figure>
                 <div class="text">
                   <h3>Aleksey Bondarev</h3>
-                  <p>Data Structure</p>
+                  <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
@@ -364,7 +364,7 @@
                 </figure>
                 <div class="text">
                   <h3>Burul Shambetova</h3>
-                  <p>Programming Languages</p>
+                  <p>Lecturer</p>
                   <ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
