--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Policy & Regulations</a></li>
                   <li><a href="courses.html">Software</a></li>
-                  <li><a href="contact.html">Contacts</a></li>
+                  <li><a href="contact/contact.html">Contacts</a></li>
                   
                   <!-- <li class="dropdown-submenu dropdown">
                     <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
