--- a/courses.html
+++ b/courses.html
@@ -164,14 +164,14 @@
               <div class="probootstrap-service-2 probootstrap-animate">
                 <div class="image">
                   <div class="image-bg">
-                    <img src="img/img_sm_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                    <img src="images/concepteng.jpg" alt="Concepts of Engineering">
                   </div>
                 </div>
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
                   <h3>CS 100: Introduction to Computer Science and Engineering</h3>
-                  <p>First part of the course introduces students to the profession, including the disciplines of chemical, civil, computer, electrical, environmental, and mechanical engineering. Prepares students for success through the integration of the following important skills: technical problem solving and engineering design, ethical decision-making, teamwork, and communicating to diverse audiences. Second part is aimed at students with little or no programming experience. It aims to provide students with an understanding of the role computation can play in solving problems. It also aims to help students, regardless of their major, to feel justifiably confident of their ability to write small programs that allow them to accomplish useful goals. The class will use the Python programming language.</p>
-                  <p><a href="#" class="btn btn-primary">Top page</a> <span class="enrolled-count">2,928 students enrolled</span></p>
+                  <p>First part of the course introduces students to the profession, including the disciplines of chemical, civil, computer, electrical, environmental, and mechanical engineering...</p>
+                  <p><a href="#" class="btn btn-primary">More</a> <span class="enrolled-count">2,928 students enrolled</span></p>
                 </div>
               </div>
 
@@ -183,8 +183,8 @@
                 </div>
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
-                  <h3>Chemical Engineering</h3>
-                  <p>Laboriosam pariatur modi praesentium deleniti molestiae officiis atque numquam quos quis nisi voluptatum architecto rerum error.</p>
+                  <h3>Data Structure</h3>
+                  <p>In computer science, a data structure is a particular way of storing and organizing data in a computer so that it can be used efficiently.[1][2]Different kinds of data structures are suited to different kinds of applications, and some are highly specialized to specific tasks. For example, B-trees are particularly well-suited for implementation of databases, while compilerimplementations usually use hash tables to look up identifiers.Data structures provide a means to manage huge amounts of data efficiently, such as large databases and internet indexing services. Usually, efficient data structures are a key to designing efficient algorithms. Some formal design methods and programming languages emphasize data structures, rather than algorithms, as the key organizing factor in software design.</p>
                   <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">7,202 students enrolled</span></p>
                 </div>
               </div>
@@ -195,14 +195,14 @@
               <div class="probootstrap-service-2 probootstrap-animate">
                 <div class="image">
                   <div class="image-bg">
-                    <img src="img/img_sm_2.jpg" alt="Free Bootstrap Template by ProBootstrap.com">
+                    <img src="images/stat.jpg" alt="Probability and Statistics">
                   </div>
                 </div>
                 <div class="text">
                   <span class="probootstrap-meta"><i class="icon-calendar2"></i> July 10, 2017</span>
                   <h3>CS 312: Probability and statistics</h3>
-                  <p>Probability and statistics are two related but separate academic disciplines. Statistical analysis often uses probability distributions, and the two topics are often studied together. However, probability theory contains much that is of mostly of mathematical interest and not directly relevant to statistics. Moreover, many topics in statistics are independent of probability theory.</p>
-                  <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">12,582 students enrolled</span></p>
+                  <p>Probability and statistics are two related but separate academic disciplines. Statistical analysis often uses probability distributions, and the two topics are often studied together. However, probability theory contains much...</p>
+                  <p><a href="#" class="btn btn-primary">More</a> <span class="enrolled-count">12,582 students enrolled</span></p>
                 </div>
               </div>
 
