--- a/teachers.html
+++ b/teachers.html
@@ -154,7 +154,7 @@
       </nav>
       
       <section class="probootstrap-section probootstrap-section-colored">
-        <div class="container">
+        <div class="container" >
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
               <h1>Our Teachers</h1>
@@ -163,19 +163,19 @@
         </div>
       </section>
 
-      <section class="probootstrap-section">
+      <!--<section class="probootstrap-section">
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <div class="probootstrap-flex-block">
-                <div class="probootstrap-text probootstrap-animate">
+                <!--<div class="probootstrap-text probootstrap-animate">
                   <h3>We Hired Certified Teachers For Our Students</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
                   <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
                 <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_3.jpg)">
                   <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
