--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
     
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/custom.css">
 
     <!--[if lt IE 9]>
@@ -127,7 +127,7 @@
         </div>
       </nav>
       
-      <section class="probootstrap-section probootstrap-section-colored" style="background-image: url(images/image2.jpg);">
+      <section class="probootstrap-section probootstrap-section-colored">
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
