Ppersonal Page and corrections

--- a/courses.html
+++ b/courses.html
@@ -311,14 +311,14 @@
                   <img src="images/faculty/n.shaidullaev.jpg" alt="Nurlan Shaidullaev" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Nurlan Shaidullaev</h3>
+                  <h3><a href="faculty/n.shaidullaev.html">Nurlan Shaidullaev</a></h3>
                   <p>Head of CS Department</p>
-                  <ul class="probootstrap-footer-social">
+                  <!--<ul class="probootstrap-footer-social">
                     <li class="twitter"><a href="#"><i class="icon-twitter"></i></a></li>
                     <li class="facebook"><a href="#"><i class="icon-facebook2"></i></a></li>
                     <li class="instagram"><a href="#"><i class="icon-instagram2"></i></a></li>
                     <li class="google-plus"><a href="#"><i class="icon-google-plus"></i></a></li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
             </div>
