--- a/contact/contact.html
+++ b/contact/contact.html
@@ -29,7 +29,7 @@
     
 
   </head>
-  <body style="background-color:  #696969;">
+  <body>
   
   <nav class="navbar navbar-default probootstrap-navbar" style="background-color: transparent;">
         <div class="container">
@@ -49,7 +49,7 @@
                 <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
-                  <li><a href="../News/new.html">News</a></li>
+                  <li><a href="../News/news.html">News</a></li>
                   <li><a href="../courses.html">Developments</a></li>
                   <li><a href="course-single.html">Exchange Programs</a></li>
                   <li><a href="gallery.html">Prospective Students</a></li>
