--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="background:url(images/pattern2.jpg) repeat fixed;">
+  <body>
 
    <!--<div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross">asdasdasd</i></a>
@@ -72,11 +72,11 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="index.html" style="color: #49d192">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
                 <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Department</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Department</a>
                 <ul class="dropdown-menu">
-                  <li><a href="News/new.html">News</a></li>
+                  <li><a href="News/news.html">News</a></li>
                   <li><a href="error.html">Developments</a></li>
                   <li><a href="http://ic.iaau.edu.kg/">Exchange Programs</a></li>
                   <li><a href="error.html">Prospective Students</a></li>
@@ -96,7 +96,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Bachelor Program</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Bachelor Program</a>
                 <ul class="dropdown-menu">
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="courses.html">Research</a></li>
@@ -119,7 +119,7 @@
                 </ul>
               </li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Master Degree</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Master Degree</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Overview</a></li>
                   <li><a href="courses.html">Program</a></li>
@@ -140,7 +140,7 @@
               </li>
                  
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Calendar</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle" >Calendar</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Academic Calendar</a></li>
                   <li><a href="courses.html">Schedule of Lectures</a></li>
@@ -150,9 +150,9 @@
                   
                </ul>
               </li>
-            <li><a href="teachers.html" style="color: #49d192">Faculty</a></li>
+            <li><a href="teachers.html" >Faculty</a></li>
               <li class="dropdown">
-                <a href="#" data-toggle="dropdown" class="dropdown-toggle" style="color: #49d192">Labs</a>
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Labs</a>
                 <ul class="dropdown-menu">
                   <li><a href="about.html">Policy & Regulations</a></li>
                   <li><a href="courses.html">Software</a></li>
