--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </div>
         </div>
       </div>--> 
-      <nav class="navbar navbar-default probootstrap-navbar">
+      <nav id="navbar" class="navbar navbar-default probootstrap-navbar" >
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
@@ -779,17 +779,19 @@
 
     <script src="js/scripts.min.js"></script>
     <script src="js/main.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/scroll.js"></script>
     <script type="text/javascript" src="js/typed.js"></script>
+
 
     <script type="text/javascript">
         var typed = new Typed(".type", {
           strings: ["<span style='color:#9eaac7'><b>System.</b></span><span style='color:violet'><b>out</b></span><span style='color:#9eaac7'><b>.println</b></span><span style='color:#9eaac7'><b>(</b></span><span style='color:#698857'><b>&#34; WELCOME TO COMPUTER SCIENCE DEPARTMENT &#34;</b></span><span style='color:#9eaac7'><b>)</b></span><span style='color:#ce7827'><b>;</b></span>"],
           typeSpeed : 20,
-          
-          
-        });
+          });
     </script>
+
+ 
+
 
   </body>
 </html>
