--- a/contact/contact.html
+++ b/contact/contact.html
@@ -23,7 +23,7 @@
    <link rel="stylesheet" type="text/css" href="css/main.css">
   <!--===============================================================================================-->
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,700|Open+Sans" rel="stylesheet ">
     <link rel="stylesheet" href="../css/styles-merged.css"> <!--code for index Navbar-->
     <link rel="stylesheet" href="../css/style.css">
     
@@ -31,7 +31,7 @@
   </head>
   <body>
   
-  <nav class="navbar navbar-default probootstrap-navbar">
+  <nav id="navbar" class="navbar navbar-default probootstrap-navbar" >
         <div class="container">
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
@@ -276,7 +276,7 @@
 
     <script src="../js/scripts.min.js"></script>
       <script src="../js/main.min.js"></script>
-      <script src="../js/custom.js"></script>
+      <script src="../js/scroll.js"></script>
 
 
   <script>
