--- a/teachers.html
+++ b/teachers.html
@@ -96,7 +96,7 @@
                   <li><a href="contact.html">Contact Us</a></li>
                   
                  
-                  <li><a href="news.html" style="color: #49d192">Info</a></li>
+                  <li><a href="news.html">Info</a></li>
                 </ul>
               </li>
               <li class="dropdown">
@@ -170,7 +170,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="probootstrap-flex-block">
-                <!--<div class="probootstrap-text probootstrap-animate">
+                <!<div class="probootstrap-text probootstrap-animate">
                   <h3>We Hired Certified Teachers For Our Students</h3>
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
                   <p><a href="#" class="btn btn-primary">Learn More</a></p>
