--- a/teachers.html
+++ b/teachers.html
@@ -154,8 +154,8 @@
         </div>
       </nav>
       
-      <section class="probootstrap-section probootstrap-section-colored">
-        <div class="container" >
+      <!--<section class="probootstrap-section probootstrap-section-colored">
+        <!--<div class="container" >
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
               <h1>Our Teachers</h1>
