--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle" >Calendar</a>
                 <ul class="dropdown-menu">
-                  <li><a href="about.html">Academic Calendar</a></li>
+                  <li><a href="http://iaau.edu.kg/view/public/pages/page.xhtml;jsessionid=TCIdhbOa1D1eOGAldtBq-N1i_kOX5KHgKE593l4n.sites?id=281">Academic Calendar</a></li>
                   <li><a href="courses.html">Schedule of Lectures</a></li>
                   <li><a href="course-single.html">Midterms Schedule</a></li>
                   <li><a href="gallery.html">Finals Schedule</a></li>
