--- a/teachers.html
+++ b/teachers.html
@@ -218,6 +218,7 @@
      
           
   <div style="padding: 120px 50px 0 50px;">
+     <div class="teacher-top"><h2> Computer Science Department Teachers </h2 >  </div >
           <div class="row">
             <div class="col-md-3 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
